Add sergey slots example

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
 
   <body>
-    <sergey-import src="modulo" />
+    <sergey-import src="modulo">
+      <sergey-template some="hola" />
+    </sergey-import>
   </body>
 
 </html>
